--- a/bitpackedmovi/builder/Makefile
+++ b/bitpackedmovi/builder/Makefile
@@ -4,11 +4,39 @@ all: builder
 
 sdslincdir = ../include
 sdsllibdir = ../lib
+ropebwt3dir = ../../ropebwt3
 
-libs = -lsdsl
+objs = $(ropebwt3dir)/bre.o\
+	   $(ropebwt3dir)/dawg.o\
+	   $(ropebwt3dir)/fm-index.o\
+	   $(ropebwt3dir)/io.o\
+	   $(ropebwt3dir)/kalloc.o\
+	   $(ropebwt3dir)/kthread.o\
+	   $(ropebwt3dir)/libsais16.o\
+	   $(ropebwt3dir)/libsais16x64.o\
+	   $(ropebwt3dir)/misc.o\
+	   $(ropebwt3dir)/mrope.o\
+	   $(ropebwt3dir)/rld0.o\
+	   $(ropebwt3dir)/rle.o\
+	   $(ropebwt3dir)/rope.o\
+	   $(ropebwt3dir)/ssa.o
+
+libs = -lsdsl -lpthread -lz -lm
+incs = -I$(sdslincdir) -I$(ropebwt3dir)
+
+ifneq ($(asan),)
+	cppflags+=-fsanitize=address
+	libs+=-fsanitize=address -ldl
+endif
+
+ifneq ($(omp),0)
+	cppflags=-DLIBSAIS_OPENMP
+	cppflags+=-fopenmp
+	libs+=-fopenmp
+endif
 
 clean:
 	-rm builder
 
-builder: builder.cpp
-	$(CXX) -I$(sdslincdir) -L$(sdsllibdir) $^ -o $@ $(libs)
+builder: $(objs) builder.cpp
+	$(CXX) $(cppflags) $(incs) -L$(sdsllibdir) $^ -o $@ $(libs)
