Finished debugging? If so, LCP sampling done

--- a/bitpackedmovi/builder/Makefile
+++ b/bitpackedmovi/builder/Makefile
@@ -2,7 +2,7 @@ all: builder
 
 .PHONY: all clean test
 
-testinds = ../../data/testing/idx.fmd #../../data/testing/mtb152.fmd
+testinds = ../../data/testing/idx.fmd ../../data/testing/mtb152.fmd
 
 sdslincdir = ../include
 sdsllibdir = ../lib
