--- a/bitpackedmovi/builder/Makefile
+++ b/bitpackedmovi/builder/Makefile
@@ -26,8 +26,8 @@ objs = $(ropebwt3dir)/bre.o\
 libs = -lsdsl -lpthread -lz -lm
 incs = -I$(sdslincdir) -I$(ropebwt3dir)
 
-#cppflags+=-Wall -O3 -DNDEBUG
-cppflags+=-Wall -g
+cppflags+=-Wall -O3 -DNDEBUG
+#cppflags+=-Wall -g
 
 ifneq ($(asan),)
 	cppflags+=-fsanitize=address
