--- a/bitpackedmovi/builder/testing/Makefile
+++ b/bitpackedmovi/builder/testing/Makefile
@@ -1,9 +1,12 @@
 all: test
 
-.PHONY: all clean builder kactl-sa-implmentation generation
+.PHONY: all clean ropebwt3 builder kactl-sa-implmentation generation
 
 builder: 
 	make -C ../
+
+ropebwt3: 
+	make -C ../../../ropebwt3/
 
 generation:
 	make -C ../../../data/generation/
@@ -11,5 +14,5 @@ generation:
 kactl-sa-implementation:
 	make -C ../../../kactl-sa-implementation
 
-test: builder kactl-sa-implementation generation
-	./tester.sh ../builder ../../../kactl-sa-implementation/ ../../../data/generation
+test: ropebwt3 builder kactl-sa-implementation generation
+	./tester.sh ../../../ropebwt3/ropebwt3 ../builder ../../../kactl-sa-implementation/ ../../../data/generation
