Added minLCP brute force

--- a/less_efficient_but_accurate_algos/kactl-sa-implementation/Makefile
+++ b/less_efficient_but_accurate_algos/kactl-sa-implementation/Makefile
@@ -1,9 +1,12 @@
-all: kactl_impl
+all: kactl_impl minLCP
 
 .PHONY: all clean 
 
 clean: 
-	-rm kactl_impl
+	-rm kactl_impl minLCP
 
 kactl_impl: algo.cpp
+	$(CXX) $^ -o $@
+
+minLCP: minLCP.cpp
 	$(CXX) $^ -o $@
