--- a/bitpackedmovi/msIndexBuilder/Makefile
+++ b/bitpackedmovi/msIndexBuilder/Makefile
@@ -1,2 +1,65 @@
-all:
-	@echo "Nothing here yet, in development"
+SHELL := /bin/bash
+
+all: msIndexBuilder
+
+.PHONY: all clean test
+
+numIterRand=10
+
+testinds = ../../data/testing/idx.fmd ../../data/testing/mtb152.fmd
+
+optIncDir = ../include
+incdir = ../thirdparty/include
+libdir = ../thirdparty/lib
+ropebwt3dir = ../../ropebwt3
+
+objs = $(ropebwt3dir)/bre.o\
+	   $(ropebwt3dir)/dawg.o\
+	   $(ropebwt3dir)/fm-index.o\
+	   $(ropebwt3dir)/io.o\
+	   $(ropebwt3dir)/kalloc.o\
+	   $(ropebwt3dir)/kthread.o\
+	   $(ropebwt3dir)/libsais16.o\
+	   $(ropebwt3dir)/libsais16x64.o\
+	   $(ropebwt3dir)/misc.o\
+	   $(ropebwt3dir)/mrope.o\
+	   $(ropebwt3dir)/rld0.o\
+	   $(ropebwt3dir)/rle.o\
+	   $(ropebwt3dir)/rope.o\
+	   $(ropebwt3dir)/ssa.o
+
+msHeads = $(optIncDir)/util/util.h\
+		  $(optIncDir)/lcpComputer/lcpComputer.h\
+		  $(optIncDir)/matchingStatistics/msIndex.h\
+		  $(optIncDir)/moveStructure/moveStructure.h
+
+libs = -lsdsl -lpthread -lz -lm -latomic
+incs = -I$(optIncDir) -isystem$(incdir) -isystem$(ropebwt3dir)
+
+developmentflags+= -Wall -Wpedantic -Wextra -pedantic-errors -Wold-style-cast
+cppflags+=$(developmentflags) -O3 -DNDEBUG
+#cppflags+=$(developmentflags) -Wall -g
+
+ifneq ($(asan),)
+	cppflags+=-fsanitize=address
+	libs+=-fsanitize=address -ldl
+endif
+
+ifneq ($(omp),0)
+	cppflags+=-DLIBSAIS_OPENMP
+	cppflags+=-fopenmp
+	libs+=-fopenmp
+endif
+
+clean:
+	-rm msIndexBuilder
+
+test: msIndexBuilder
+	set -e && \
+	for testind in $(testinds); do \
+		./msIndexBuilder; \
+	done
+	#./lcpComputer -f fmd -i $$testind -orlcp test.rlcp -t testTEMPFILE;
+
+msIndexBuilder: msIndexBuilder.cpp $(msHeads) $(objs)
+	$(CXX) $(cppflags) $(incs) -L$(libdir) $(objs) $< -o $@ $(libs)
