Added SMEM computation to msIndex

--- a/bitpackedmovi/MEM/Makefile
+++ b/bitpackedmovi/MEM/Makefile
@@ -1,4 +1,4 @@
-all: repeats
+all: MEM
 
 .PHONY: all clean test
 
@@ -24,11 +24,15 @@ objs = $(ropebwt3dir)/bre.o\
 	   $(ropebwt3dir)/rope.o\
 	   $(ropebwt3dir)/ssa.o
 
+MEMHeads = $(optIncDir)/util/util.h\
+           $(optIncDir)/matchingStatistics/msIndex.h\
+           $(optIncDir)/moveStructure/moveStructure.h\
+
 libs = -lsdsl -lpthread -lz -lm
 incs = -I$(optIncDir) -isystem$(incdir) -isystem$(ropebwt3dir)
 
-cppflags+=-Wall -O3 -DNDEBUG
-#cppflags+=-Wall -g
+#cppflags+=-Wall -O3 -DNDEBUG
+cppflags+=-Wall -g
 
 ifneq ($(asan),)
 	cppflags+=-fsanitize=address
@@ -42,14 +46,14 @@ ifneq ($(omp),0)
 endif
 
 clean:
-	-rm repeats
+	-rm MEM
 
-test: repeats
+test: MEM
 	set -e && \
 	for testind in $(testinds); do \
-		./repeats SM $$testind; \
-		./repeats LM $$testind; \
+		./MEM SM $$testind; \
+		./MEM LM $$testind; \
 	done
 
-repeats: ../include/optbwtrl/optbwtrl.h ../include/optbwtrl/util.h $(objs) repeats.cpp
-	$(CXX) $(cppflags) $(incs) -L$(libdir) $^ -o $@ $(libs)
+MEM: MEM.cpp $(MEMHeads) $(objs)
+	$(CXX) $(cppflags) $(incs) -L$(libdir) $(objs) $< -o $@ $(libs)
