--- a/bitpackedmovi/msIndexBuilder/Makefile
+++ b/bitpackedmovi/msIndexBuilder/Makefile
@@ -25,7 +25,7 @@ msHeads = $(optIncDir)/util/util.h\
 libs = -lsdsl -lpthread -lz -lm -latomic
 incs = -I$(optIncDir) -isystem$(incdir) -isystem$(ropebwt3dir)
 
-developmentflags+= -Wall -Wpedantic -Wextra -pedantic-errors -Wold-style-cast
+developmentflags+= -std=c++17 -Wall -Wpedantic -Wextra -pedantic-errors -Wold-style-cast
 cppflags+=$(developmentflags) -O3 -DNDEBUG
 #cppflags+=$(developmentflags) -Wall -g
 
