renamed lcpComputer to TeraLCP

--- a/src/MEM/testing/Makefile
+++ b/src/MEM/testing/Makefile
@@ -8,15 +8,15 @@ LEN = 10
 numIter=10
 
 ropebwt3 = ../../../ropebwt3/
-lcpComputer = ../../lcpComputer/
+TeraLCP = ../../TeraLCP/
 msIndexBuilder = ../../msIndexBuilder/
 MEM = ../
 brute_force_repeats = ../../../less_efficient_but_accurate_algos/Repeats/
 syntheticgen = ../../../data/generation/
 
-allprogs = ropebwt3 lcpComputer msIndexBuilder MEM brute_force_repeats syntheticgen
+allprogs = ropebwt3 TeraLCP msIndexBuilder MEM brute_force_repeats syntheticgen
 
-.PHONY: all test ropebwt3 lcpComputer msIndexBuilder MEM brute_force_repeats syntheticgen
+.PHONY: all test ropebwt3 TeraLCP msIndexBuilder MEM brute_force_repeats syntheticgen
 
 $(allprogs):
 	make -C $($@) $@
